--- a/templates/response.html
+++ b/templates/response.html
@@ -106,12 +106,15 @@
             
         </tbody>
     </table>
+
+
     {% endfor %} 
     
     
     {% endif %}
 
-
+<form action="/upload" method="POST"><button type="submit">Download File</button></form>
+<form action="/" method="GET"><button type="submit">Regresar</button></form>
 
 
 </body>
