--- a/templates/home.html
+++ b/templates/home.html
@@ -23,8 +23,8 @@
                 <div class="col col-lg-6">
                     <div>
                         <div class=" box input-group mb-3">
-                            <input type="file" class="form-control" name="file" id="mov" accept=".xlsx" required>
-                            <label class="input-group-text" for="mov">Movimientos</label>
+                            <input type="file" class="form-control" name="file" id="mov" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" required>
+                            <label class="input-group-text" for="mov">Estado de Cuenta</label>
                           </div>
                     </div>
                     
@@ -39,8 +39,8 @@
                     <div >
                         <div  class="box input-group mb-3">
                         
-                            <input type="file" class="form-control" name="file" id="pro" accept=".xlsx">
-                            <label class="input-group-text" for="pro">Providers:</label>
+                            <input type="file" class="form-control" name="file" id="pro" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
+                            <label class="input-group-text" for="pro">Proveedores:</label>
                         </div>
                     </div>
                     
@@ -49,8 +49,8 @@
                     <div>
                         <div  class="box input-group mb-3">
                         
-                            <input type="file" class="form-control" name="file" id="int"  accept=".xlsx">
-                            <label class="input-group-text" for="int">Interbanks:</label>
+                            <input type="file" class="form-control" name="file" id="int"  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
+                            <label class="input-group-text" for="int">Interbancarias:</label>
                         </div>
                     </div>
                     
@@ -60,8 +60,8 @@
 
                         <div  class="box input-group mb-3">
                             
-                            <input type="file" class="form-control" name="file" id="tra" accept=".xlsx" >
-                            <label class="input-group-text" for="tra">Transfers:</label>
+                            <input type="file" class="form-control" name="file" id="tra" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" >
+                            <label class="input-group-text" for="tra">Transferencias:</label>
                         </div>
                     </div>
                 </div>
