--- a/templates/response.html
+++ b/templates/response.html
@@ -2,57 +2,79 @@
 <html>
 <head>
     <title>Bancos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+ 
 </head>
 <body>
-    <h1>Resumen Movimientos</h1>
-    <label for="movimientos"></label>
-    {% if data.movements|length > 0  %}
-    <span>Fallo en el archivo </span>
-    <ul>
-        {% for item in data.movements %}
-          <li>{{ item["monto"] }}</li>
-        {% endfor %}
-      </ul>
-    {% endif %}
+    <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <div class="card">
 
-    <!-- Transferencias-->
-    <h1>Resumen Transfers</h1>
-    <label for="tranfers"></label>
-    {% if data.transfers|length>0  %}
-    <span>Registros no encontrados</span>
-    {% for error in data.transfers %}
-    <table>
-        <thead>
+                
+                <h1>Estado de cuenta</h1>
+                <label for="movimientos"></label>
+                {% if data.movements.message   %}
+                <span>{{data.movements.message   }}</span>
+                <ul>
+                    {% for item in data.movements.items %}
+                      <li>{{ item["monto"] }}</li>
+                    {% endfor %}
+                  </ul>
+                {% endif %}
+            </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+
+                <div class="card">
+        <!-- Transferencias-->
+        <h1>Resumen Transfers</h1>
+        <label for="tranfers"></label>
+        {% if data.transfers.message  %}
+        <span>Error {{data.transfers.message}}</span>
+        
+        <table>
+            <thead>
+                <tr>
+                    <td>Fecha</td>
+                    <td>Ordenante</td>
+                    <td>Monto</td>
+                </tr>
+            </thead>
+            <tbody>
+            {% for item in data.transfers.items %}
             <tr>
-                <td>Fecha</td>
-                <td>Ordenante</td>
-                <td>Monto</td>
+                <td>{{ item["fecha"] }}</td>
+                <td>{{ item["ordenante"] }}</td>
+                <td>{{ item["monto"] }}</td>
             </tr>
-        </thead>
-        <tbody>
-        {% for item in error.items %}
-        <tr>
-            <td>{{ item["fecha"] }}</td>
-            <td>{{ item["ordenante"] }}</td>
-            <td>{{ item["monto"] }}</td>
-        </tr>
-          
-        {% endfor %}
+              
+            {% endfor %}
+    
+                
+            </tbody>
+        </table>
+        
+        
+        {% endif %}        
+    </div>
+            </div>
+        </div>
 
-            
-        </tbody>
-    </table>
-    {% endfor %} 
-    
-    
-    {% endif %}
-    
-<!--Providers-->
+
+        <div class="row">
+            <div class="col">
+
+                <div class="card">
+    <!--Providers-->
     <h1>Resumen Providers</h1>
     <label for="providers"></label>
-    {% if data.providers|length>0  %}
-    <span>Registros no encontrados</span>
-    {% for error in data.providers %}
+    {% if data.providers.message  %}
+    <span>Error: {{data.providers.message}}</span>
     <table>
         <thead>
             <tr>
@@ -62,7 +84,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for item in error.items %}
+        {% for item in data.providers.items %}
         <tr>
             <td>{{ item["fecha"] }}</td>
             <td>{{ item["ordenante"] }}</td>
@@ -74,17 +96,23 @@
             
         </tbody>
     </table>
-    {% endfor %} 
     
     
     {% endif %}
-
-<!--Interbanks-->
+</div>
+            </div>
+        </div>
+    
+    
+        <div class="row">
+            <div class="col">
+                <div class="card">
+    <!--Interbanks-->
     <h1>Resumen Interbancarios</h1>
     <label for="interbanks"></label>
-    {% if data.interbanks|length>0  %}
-    <span>Registros no encontrados</span>
-    {% for error in data.interbanks %}
+    {% if data.interbanks.message  %}
+    <span>Error {{data.interbanks.message}}</span>
+    
     <table>
         <thead>
             <tr>
@@ -94,7 +122,7 @@
             </tr>
         </thead>
         <tbody>
-        {% for item in error.items %}
+        {% for item in data.interbanks.items %}
         <tr>
             <td>{{ item["ordenante"] }}</td>
             <td>{{ item["monto"] }}</td>
@@ -107,15 +135,35 @@
         </tbody>
     </table>
 
-
-    {% endfor %} 
     
     
-    {% endif %}
-
-<form action="/upload" method="POST"><button type="submit">Download File</button></form>
-<form action="/" method="GET"><button type="submit">Regresar</button></form>
-
+    {% endif %}            
+</div>
+            </div>
+        </div>
+       
+        
+        
+    <div class="row">
+        <div class="col">
+            <form action="/upload" method="POST">
+                <button type="submit"  class="btn btn-primary btn-lg">Download File</button>
+            </form>
+            
+        </div>
+        <div class="col">
+            <form action="/" method="GET">
+                
+                <button type="submit" class="btn btn-secondary btn-lg">Regresar</button>
+            </form>
+            
+        </div>
+    </div>
+    
+    
+    
+        </div>
+    
 
 </body>
 </html>
