--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,108 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>Bancos</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.3.2/spin.min.js"></script>
+    <style>
+        .loader {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 9999;
+            width: 50px;
+            height: 50px;
+        }
+        nav {
+    background-color: #6fbde8;
+    padding: 10px;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline-block;
+    margin-right: 20px;
+    font-size: 26px; /* Ajusta el tamaño de letra aquí */
+    color: #FFFF;
+    border-bottom: 4px solid #037940; /* Agrega una 
+}
+
+
+nav ul li {
+     border-bottom: 4px solid #037940; /* Agrega una 
+    display: inline-block;
+    margin-right: 10px;
+    font-size: 26px; /* Ajusta el tamaño de letra aquí */
+    color: #FFFF;
+}
+
+
+nav ul li a:hover {
+    color: #ffffff;
+}
+nav ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 26px; /* Ajusta el tamaño de letra aquí */
+}
+
+
+    </style>
+  <script>
+    // Variable para mantener el estado del botón de envío
+    var isSubmitButtonDisabled = false;
+
+    // Ocultar los inputs de tipo file y mostrar el div con el spinner cuando se hace clic en el botón "Subir"
+    document.addEventListener("DOMContentLoaded", function () {
+        document.getElementById("submitBtn").addEventListener("click", function () {
+            if (!isSubmitButtonDisabled) {
+                var inputFiles = document.querySelectorAll(".input-file");
+                var loaderDiv = document.getElementById("loader");
+                var divContainer = document.querySelector(".row.justify-content-md");
+
+                inputFiles.forEach(function (inputFile) {
+                    inputFile.classList.add("d-none");
+                });
+
+                loaderDiv.style.display = "inline-block";
+                divContainer.classList.add("d-none");
+                isSubmitButtonDisabled = true; // Desactivar el botón de envío
+            }
+        });
+    });
+
+    // Mostrar el spinner y deshabilitar el botón de envío cuando se envía el formulario
+    window.addEventListener("load", function () {
+        document.querySelector("form").addEventListener("submit", function () {
+            var target = document.getElementById("loader");
+            var spinner = new Spinner().spin(target);
+
+            if (!isSubmitButtonDisabled) {
+                document.getElementById("submitBtn").setAttribute("disabled", "true");
+                target.style.display = "inline-block";
+                isSubmitButtonDisabled = true; // Desactivar el botón de envío
+            }
+        });
+    });
+</script>
 </head>
 <body>
-   
+   <header>
+    <!-- <img src="" width="400px" height="400px" alt=""> -->
+    <img src="./images.png" width="400px" height="400px"  alt="Descripción de la imagen">
+
+
+   </header>
+   <nav>
+    <ul>
+        <li>Home</li>
+        <li><a href="basedatos">Base Datos</a></li>
+    </ul>
+   </nav>
     <div class="container text-center">
         <h1>Cuadre de Bancos</h1>
         <span class="error">
@@ -15,7 +114,7 @@
         {% endif %}
         </span>
         
-        <form method="POST" action="/" enctype="multipart/form-data">
+        <form method="POST" id="fom" action="/" enctype="multipart/form-data">
             
             
             
@@ -71,7 +170,7 @@
                 <div class="col">
 
                     <div class="d-grid gap-2 col-6 mx-auto">
-                        <input class="btn btn-primary" type="submit" value="Subir">
+                        <input   id="submitBtn" class="btn btn-primary" type="submit" value="Subir">
                         
                       </div>
 
@@ -84,6 +183,7 @@
         
       </div>
 
+      <div id="loader" class="loader"></div>
       
 
     
