--- a/templates/response.html
+++ b/templates/response.html
@@ -6,9 +6,39 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
  
 </head>
+
 <body>
+    <header>
+        <img src="{{ url_for('static', filename='images/logos.jpeg') }}" alt="Imagen" width="150" height="80">
+    
+       </header>
+    <nav  class="bg-body-tertiary">
+  
+        <ul class="nav nav-pills justify-content-center mb-3 "  id="pills-tab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link " href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="basedatos">Base de Datos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="upload">Resultados</a>
+              </li>
+           
+          </ul>
+       </nav>
     <div class="container text-center">
         <div class="row">
+                   
+    <div class="row">
+        <div class="col">
+            <form action="/upload" method="POST">
+                <button type="submit"  class="btn btn-success btn-lg">Descargar</button>
+            </form>
+            
+        </div>
+        
+    </div>
             <div class="col">
                 <div class="card">
 
@@ -143,22 +173,7 @@
         </div>
        
         
-        
-    <div class="row">
-        <div class="col">
-            <form action="/upload" method="POST">
-                <button type="submit"  class="btn btn-primary btn-lg">Download File</button>
-            </form>
-            
-        </div>
-        <div class="col">
-            <form action="/" method="GET">
-                
-                <button type="submit" class="btn btn-secondary btn-lg">Regresar</button>
-            </form>
-            
-        </div>
-    </div>
+ 
     
     
     
