--- a/templates/base-datos.html
+++ b/templates/base-datos.html
@@ -4,6 +4,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
     <title>base</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </head>
 <body>
    <header>
@@ -23,17 +25,21 @@
        
       </ul>
    </nav>
-    <div class="container container-maxwidth-sm mx-auto">
+    <div class="container container-maxwidth-sm mx-auto text-center">
         <div class="row">
 
             <div class="col">
 
 
-                <h1>subir los archivos de la base de  datos</h1>
+                <h1 class="justify-content-center">Subir los archivos de la base de  datos</h1>
                 <span class="error">
                     {% if error_message %}
                     <p>Error: {{ error_message }}</p>
                 {% endif %}
+                {% if mensaje_exito %}
+                    <p>{{ mensaje_exito }}</p>
+                {% endif %}
+
                 </span>
                 
                 <form method="POST" action="/basedatos" enctype="multipart/form-data">
@@ -78,8 +84,9 @@
                         <div class="col">
         
                             <div class="d-grid gap-2 col-6 mx-auto">
-                                <input class="btn btn-primary" type="submit" value="Subir">
-                                
+                                <input class="btn btn-primary" id="submitBtn"   type="submit" value="Subir" >
+                                <!-- <button class="btn btn-primary" id="submitBtn" onclick="validateFiles()">Subir</button> -->
+
                               </div>
         
                           
@@ -95,7 +102,7 @@
         </div>
 
       </div>
-
+   
       
 
     
