--- a/templates/base-datos.html
+++ b/templates/base-datos.html
@@ -36,6 +36,9 @@
                     {% if error_message %}
                     <p>Error: {{ error_message }}</p>
                 {% endif %}
+
+                </span>
+                <span class="success">
                 {% if mensaje_exito %}
                     <p>{{ mensaje_exito }}</p>
                 {% endif %}
