--- a/templates/home.html
+++ b/templates/home.html
@@ -72,6 +72,9 @@
         <li class="nav-item">
           <a class="nav-link " href="basedatos">Base de Datos</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link " href="asiento">Asientos</a>
+          </li>
        
       </ul>
    </nav>
