areglados de los botones

--- a/templates/asiento.html
+++ b/templates/asiento.html
@@ -36,7 +36,7 @@
             <div class="col">
 
 
-                <h1 class="justify-content-center">Conciliación Con Asientos</h1>
+                <h1 class="justify-content-center"> Asientos</h1>
                 <span class="error">
                     {% if error_message %}
                     <p>Error: {{ error_message }}</p>
