--- a/templates/asiento.html
+++ b/templates/asiento.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-    <title>base</title>
+    <title>Asientos</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 </head>
