--- a/templates/base-datos.html
+++ b/templates/base-datos.html
@@ -79,7 +79,7 @@
                                 <div  class="box input-group mb-3">
                                     
                                     <input type="file" class="form-control" name="file" id="trabajores" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" >
-                                    <label class="input-group-text" for="tra">TRABAJORES:</label>
+                                    <label class="input-group-text" for="tra">TRABAJADORES:</label>
                                 </div>
                             </div>
                         </div>
