--- a/templates/home.html
+++ b/templates/home.html
@@ -95,7 +95,7 @@
                     <div>
                         <div class=" box input-group mb-3">
                             <input type="file" class="form-control" name="file" id="mov" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" required>
-                            <label class="input-group-text" for="mov">Estado de Cuenta</label>
+                            <label class="input-group-text" for="mov">Movimientos</label>
                           </div>
                     </div>
                     
