--- a/templates/response.html
+++ b/templates/response.html
@@ -31,9 +31,17 @@
         <div class="row">
                    
     <div class="row">
+        
         <div class="col">
             <form action="/upload" method="POST">
-                <button type="submit"  class="btn btn-success btn-lg">Descargar</button>
+                <button type="submit"  class="btn btn-success btn-lg">Movimientos</button>
+            </form>
+            
+        </div>
+
+        <div class="col">
+            <form action="/download_recaudos" method="POST">
+                <button type="submit"  class="btn btn-success btn-lg">Recaudos</button>
             </form>
             
         </div>
