--- a/templates/asiento.html
+++ b/templates/asiento.html
@@ -117,7 +117,7 @@
                         <div class="col">
 
                             <div class="d-grid gap-2 col-6 mx-auto">
-                                <input id="submitBtn" class="btn btn-primary" type="submit" value="Subir">
+                                <input id="submitBtn" class="btn btn-primary" type="submit" value="Procesar">
                         
 
                             </div>
