--- a/templates/base-datos.html
+++ b/templates/base-datos.html
@@ -89,7 +89,7 @@
                         <div class="col">
         
                             <div class="d-grid gap-2 col-6 mx-auto">
-                                <input class="btn btn-primary" id="submitBtn"   type="submit" value="Subir" >
+                                <input class="btn btn-primary" id="submitBtn"   type="submit" value="Procesar" >
                                 <!-- <button class="btn btn-primary" id="submitBtn" onclick="validateFiles()">Subir</button> -->
 
                               </div>
