--- a/templates/home.html
+++ b/templates/home.html
@@ -143,7 +143,7 @@
                 <div class="col">
 
                     <div class="d-grid gap-2 col-6 mx-auto">
-                        <input   id="submitBtn" class="btn btn-primary" type="submit" value="Subir">
+                        <input   id="submitBtn" class="btn btn-primary" type="submit" value="Procesar">
                         
                       </div>
 
@@ -160,7 +160,7 @@
       
 
 <footer>
-    <div class="text-end">v 0.3.10</div>
+    <div class="text-end">v 0.4.0</div>
     
 </footer>
 </div>
