chore: busca por fecha, asientos

--- a/templates/asiento.html
+++ b/templates/asiento.html
@@ -102,7 +102,7 @@
                         <div class="col">
                             <div class="box input-group mb-3">
                                 <input type="file" class="form-control" name="file" id="mov"
-                                    accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel.sheet.binary.macroenabled.12"
+                                    accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
                                     required>
 
 
