fix, elimina y mejora archivos

--- a/templates/responseasiento.html
+++ b/templates/responseasiento.html
@@ -84,7 +84,7 @@ window.addEventListener("load", function() {
                                 <button type="submit" id="submit" class="btn btn-primary btn-lg">Download File</button>
                             </form> -->
 
-                            <form action="/respuestaasiento" method="POST" onsubmit="startSpinner()">
+                            <form action="/download_asientos" method="POST" onsubmit="startSpinner()">
                                 <button type="submit" id="submit" class="btn btn-primary btn-lg">Download File</button>
                               </form>
                               
