Save work: add correos flow, CLIENTES, fixes and tests passing

--- a/templates/asiento.html
+++ b/templates/asiento.html
@@ -55,6 +55,9 @@
             <li class="nav-item">
                 <a class="nav-link active" href="asiento">Asientos</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/correos">Correos</a>
+            </li>
 
         </ul>
     </nav>
@@ -109,6 +112,8 @@
                                 <label class="input-group-text" for="mov">Asientos</label>
                             </div>
                         </div>
+
+                        <!-- Codigo input removed per request; Correos will be a separate tab -->
 
 
                     </div>
