--- a/templates/home.html
+++ b/templates/home.html
@@ -71,10 +71,10 @@
           <a class="nav-link active" href="/">Home</a>
         </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="basedatos">Base de Datos</a>
+                    <a class="nav-link " href="/basedatos">Base de Datos</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link " href="asiento">Asientos</a>
+                        <a class="nav-link " href="/asiento">Asientos</a>
                     </li>
                 <li class="nav-item">
                         <a class="nav-link " href="/correos">Correos</a>
