--- a/templates/response.html
+++ b/templates/response.html
@@ -19,15 +19,21 @@
               <a class="nav-link " href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="basedatos">Base de Datos</a>
+                            <a class="nav-link " href="/basedatos">Base de Datos</a>
             </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="/asiento">Asientos</a>
+                        </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="/correos">Correos</a>
+                        </li>
             <li class="nav-item">
-                <a class="nav-link active" href="upload">Resultados</a>
+                                <a class="nav-link active" href="/upload">Resultados</a>
               </li>
            
           </ul>
        </nav>
-    <div class="container text-center">
+    <div class="container text-center pb-4">
         <div class="row">
                    
     <div class="row">
