feat: ajustar flujo asientos/clientes y simplificar pestaña correos

--- a/templates/asiento.html
+++ b/templates/asiento.html
@@ -115,6 +115,15 @@
 
                         <!-- Codigo input removed per request; Correos will be a separate tab -->
 
+                        <div class="col">
+                            <div class="box input-group mb-3">
+                                <input type="file" class="form-control" name="file" id="clientes"
+                                    accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                                    required>
+                                <label class="input-group-text" for="clientes">Clientes</label>
+                            </div>
+                        </div>
+
 
                     </div>
 
