feat: base de datos estática con clientes y correos persistentes paginados

--- a/templates/base-datos.html
+++ b/templates/base-datos.html
@@ -50,6 +50,15 @@
                 </span>
                 
                 <form method="POST" action="/basedatos" enctype="multipart/form-data">
+
+                    <div class="row align-items-start mb-1">
+                        <div class="col-lg-4 col-md-6 mx-auto">
+                            <div class="box input-group mb-3">
+                                <input type="file" class="form-control" name="file" id="clientes" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" required>
+                                <label class="input-group-text" for="clientes">CLIENTES:</label>
+                            </div>
+                        </div>
+                    </div>
                
                     <div class="row align-items-start">
                         <div class="col">
