feat: implementación de sistema de envío de correos electrónicos

--- a/templates/asiento.html
+++ b/templates/asiento.html
@@ -50,10 +50,13 @@
                 <a class="nav-link " href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link " href="basedatos">Base de Datos</a>
+                <a class="nav-link " href="/basedatos">Base de Datos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="asiento">Asientos</a>
+                <a class="nav-link active" href="/asiento">Asientos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="/correos">Correos</a>
             </li>
 
         </ul>
@@ -109,7 +112,6 @@
                                 <label class="input-group-text" for="mov">Asientos</label>
                             </div>
                         </div>
-
 
                     </div>
 
