--- a/templates/base-datos.html
+++ b/templates/base-datos.html
@@ -19,11 +19,14 @@
           <a class="nav-link " href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="basedatos">Base de Datos</a>
+                    <a class="nav-link active" href="/basedatos">Base de Datos</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="asiento">Asientos</a>
+                        <a class="nav-link " href="/asiento">Asientos</a>
         </li>
+                        <li class="nav-item">
+                                <a class="nav-link " href="/correos">Correos</a>
+                        </li>
        
       </ul>
    </nav>
@@ -44,20 +47,25 @@
                 {% if mensaje_exito %}
                     <p>{{ mensaje_exito }}</p>
                 {% endif %}
-
                 </span>
                 
                 <form method="POST" action="/basedatos" enctype="multipart/form-data">
-                    
-                    
-                    
+
+                    <div class="row align-items-start mb-1">
+                        <div class="col-lg-4 col-md-6 mx-auto">
+                            <div class="box input-group mb-3">
+                                <input type="file" class="form-control" name="file" id="clientes" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" required>
+                                <label class="input-group-text" for="clientes">CLIENTES:</label>
+                            </div>
+                        </div>
+                    </div>
                
                     <div class="row align-items-start">
                         <div class="col">
                             <div >
                                 <div  class="box input-group mb-3">
                                 
-                                    <input type="file" class="form-control" name="file" id="codigo" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
+                                    <input type="file" class="form-control" name="file" id="codigo" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" required>
                                     <label class="input-group-text" for="pro">CODIGO RECAUDO:</label>
                                 </div>
                             </div>
@@ -67,7 +75,7 @@
                             <div>
                                 <div  class="box input-group mb-3">
                                 
-                                    <input type="file" class="form-control" name="file" id="prepago"  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet">
+                                    <input type="file" class="form-control" name="file" id="prepago"  accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" required>
                                     <label class="input-group-text" for="int">PREPAGOS:</label>
                                 </div>
                             </div>
@@ -78,7 +86,7 @@
         
                                 <div  class="box input-group mb-3">
                                     
-                                    <input type="file" class="form-control" name="file" id="trabajores" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" >
+                                    <input type="file" class="form-control" name="file" id="trabajores" accept="application/vnd.ms-excel, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" required>
                                     <label class="input-group-text" for="tra">TRABAJADORES:</label>
                                 </div>
                             </div>
