--- a/templates/home.html
+++ b/templates/home.html
@@ -70,12 +70,15 @@
         <li class="nav-item">
           <a class="nav-link active" href="/">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " href="basedatos">Base de Datos</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link " href="asiento">Asientos</a>
-          </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="/basedatos">Base de Datos</a>
+                </li>
+                <li class="nav-item">
+                        <a class="nav-link " href="/asiento">Asientos</a>
+                    </li>
+                <li class="nav-item">
+                        <a class="nav-link " href="/correos">Correos</a>
+                </li>
        
       </ul>
    </nav>
