Mejora flujo de correos y vouchers manuales

--- a/templates/responseasiento.html
+++ b/templates/responseasiento.html
@@ -80,8 +80,8 @@ window.addEventListener("load", function() {
                                 {% else %}
                                     <p>No se detectaron correos.</p>
                                 {% endif %}
-                                <form action="/send_emails" method="POST">
-                                    <button type="submit" class="btn btn-success mt-2">Enviar</button>
+                                <form action="/correos" method="GET">
+                                    <button type="submit" class="btn btn-success mt-2">Ir a Correos para Enviar Manualmente</button>
                                 </form>
                             </div>
                         </div>
